codebrag-ui/app/styles/forms.styl
input[type="text"],
input[type="password"],
input[type="date"],
input[type="datetime"],
input[type="datetime-local"],
input[type="month"],
input[type="week"],
input[type="email"],
input[type="number"],
input[type="search"],
input[type="tel"],
input[type="time"],
input[type="url"],
label,
textarea,
select
  font-size: 1em;
  margin-bottom: 1.15em;

select:focus
  border: 1px solid $main-orange-color;
  box-shadow: 0 0 5px rgba(243, 114, 11, 0.7);

input[type="checkbox"]
  margin-bottom: 0;

label
  color: $second-body-text-color;

form
  margin: 0;
  padding: 0;
  font-size: 1em;
  & .form-header
    background: $header-bg-color;
    color: $header-text-color;
    height: 5.38em;
    text-align: center;
    & img.logo
      margin-top: 0.77em;
  & fieldset
    border: none;
    margin: 0;
    padding: 1.15em;
    & .prefix
      background: $lime-green-color;
      border: none;
      color: white;
      display: inline-block;
      float: left;
      font-size: 1em;
      width: 2.3125em;
  & .form-group
    position: relative;
    padding: 0 0.77em;
    &.inline
      display: inline-block;

    & span.text-error
      background: $error-red-color;
      bottom: 0.1em;
      color: $error-text-color;
      font-size: 0.814em;
      padding: 0.2em;
      position: absolute;
      right: 1em;
      & i
        color: $error-red-color;
        position: absolute;
        right: 0.6em;
        top: -1.68em;
      &:after
        border: 4px solid transparent;
        border-bottom-color: $error-red-color;
        content: "";
        position: absolute;
        right: 0.6em;
        top: -8px;


.btn-centered-wrapper
  text-align: center;


// login form
.entrance-form
  margin-left: -12.2em;
  // don't fix this one! It should be 12.2, not a half of width
  margin-top: -10.42em;
  max-width: 24.6em;
  left: 50%;
  position: absolute;
  top: 35%;

  & form
    background: white;
    border: 1px solid #e4d9b8;
    box-shadow: 0px 0px 7px 0px rgba(211, 196, 160, 0.7);

    & fieldset
      padding: 2em 1.23em;

    & button.gh span
      text-transform: lowercase;

  & input[type="password"],
    input[type="text"],
    input[type="email"]
    background: $form-input-bg-color;
    border: none;
    box-shadow: none;
    display: inline-block;
    width: 18em;

  & .checkbox
    padding: 0 0.77em;

  & .btn-centered-wrapper button
    margin-top: 1em;

  & h3
    margin-top: 0;
    margin-bottom: 0.3rem;

  .dropdown-btn
    margin-bottom: 1.15rem;

.demo-login-info
  background: #f2ecd5;
  color: #a27d69;
  padding: 0.77em 1.15em;
  text-align: center;
  &.top
    background: none;
    padding: 2em 1.15em 0;
  & a, .link
    color: #f55902;
    cursor: pointer;

.registration-success
  background: none repeat scroll 0 0 #99AB01;
  color: $error-text-color;
  padding: 0.77em 1.15em;
  text-align: center;

